section 13, finish first draft of the translation

--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -101,9 +101,18 @@ In the last chapter of \emph{Retour du divin} (1943), Audiberti develops the myt
 
 Logic, the language paradigm, the theory of sets, the \enquote{commutative} world, this is a little like this submarine. We would like to leave, but, \emph{modulo} the translations of the 21st century, all, even the quantum, all of non-commutative geometry, all may be written in set theory, and all may be axiomatized, all is ultimately language. Worst of all, just this which has no meaning when it is formalized: thus, shouldn't we argue very strongly to convince anyone about the nullity of the logic of the [?]... But in a corner of the old woods the unavoidable sophism: \enquote{the consistency of the system is a mathematical statement which necessarily has a meaning}.
 
-However, we have the impression that, as Thom said, the limits of truth, they are not falsity, they are insignificant\footnote{}. We could reasonably maintain that Gödel's theorem, before \enquote{I am not provable}, is first \enquote{I don't want to say anything}. This idea that anything () is \emph{a priori} true or false is a \enquote{fundamental intuition} which we can hardly get rid of. An analogy in the domain of moral: we have just experienced a Manichaean war, the axis of good against the axis of evil ---and
+However, we have the impression that, as Thom said, the limits of truth, they are not falsity, they are insignificance\footnote{}. We could reasonably maintain that Gödel's theorem, before \enquote{I am not provable}, is first \enquote{I don't want to say anything}. This idea that anything () is \emph{a priori} true or false is a \enquote{fundamental intuition} which we can hardly get rid of. An analogy in the domain of moral: we have just experienced a Manichaean war, the axis of good against the axis of evil ---and besides this Manichaeism\footnote{} has its result of incompleteness, these weapons of mass destruction that have to exist but which one cannot find! Why not admit that there are things more or less right (as a function of the difficulty of establishing it, for example)? We could also imagine that the meaning is diluted, that, just like some oeuvres are more beautiful than others, some statements have more meaning than others ---for example the law of quadratic reciprocity is \enquote{more memorable} than the coherence of [?]--- and that, besides, it is not really absolute, quantifiable. But this demands a finesse of interpretation absolutely foreign to the tradition of logic.
 
 \section{Did God make the integers?}
+Finally, always we come back to the integers and to the famous quote of Kronecker: \enquote{God made the integers, the rest is the work of man}. The derealization can only take place by attacking this fundamental intuition.  This attack must be carried on two fronts, the mathematical point of view, and the biological point of view, in particular the brain\footnote{}.
+
+Let's start with the brain: the structure of cells, our mode of apprehension of space, conditions our \enquote{fundamental intuitions}. This does not mean that with a different brain, the homology groups are to be different, [...]! But we will see the notion of dimension differently, we would put the mathematical \emph{artefacts} in a different hierarchy. We would also have found the concept of integers, but would it also have been fundamental, would we think about the integers as this ideal list of of bricks? More generally, our prejudices about reality come from biological determinism ---the mathematician as primate\footnote{}--- or even culturally, behold the difference with oriental thought, very little verist\footnote{}.
+
+There are other basic intuitions which have been evacuated by logic, thus the essential distinction between \emph{perfect} and \emph{imperfect}, distinction rendered in French by the choice of time, in Russian by a change of verb. This nuance does not exist in the verist world. The principal conquest of \emph{linear logic} (1986) reveals, beyond the eternal, abstract structure of ordinary logic, a perfective layer. The world of perfective logic is very little verist, it is absolutely adapted to our \enquote{Augustinian} approach. In a \enquote{perfect} implication $A \multimap B$, the premise is not usable other than once, like the notion of perfect in linguistics indicates a punctual action, non-iterated. The perfect rather lives in the finite, it is quite close to the quantum.
+
+The imperfect is more stable, eternal\footnote{}, more \enquote{Thomistic}. It is managed by an \emph{exponential} modality, $!A$ and remember that the notion of modality comes to us from Aristotle and the essentialist philosophers of the middle ages, with Thomas; these people have interested themselves in possibility, necessity. Infinity appears then, not as this Chinese wall of preexisting bricks, but as the \emph{perennity} of truth. We have seen (note 12) \emph{how} to chear with the modalities; this is made possible by their \emph{essentialist}, primitive character. The exponentials make no exception, we may \enquote{adjust} the way to obtain \enquote{usual} infinity, or more \enquote{soft} infinities, less extreme\footnote{}. Let's underscore the solution of continuity in the perfect world, which is harmoniously expressed in terms of its proper geometry and the imperfect world which rests on postulates finally justified by doubtful \enquote{fundamental intuitions}.
+
+The integers constitute, in the \enquote{classical} fundamentals, the paradigm of infinity, and the basic imperfect construction\footnote{}. To change the imperfect, this is to change the integers, not as individuals, but as dynamics, growth, complexity of functions. For this it would be necessary to mitigate the essentialism present in our approach, in relation to that which has never been used, i.e., the quantum. Remember in particular the \enquote{bosonic} side of the exponential $!A$ (as many \emph{identical} copies of $A$ as we like). This could perhaps enable us to surpass once and for all that hopeless quote of Kronecker.
 
 \section*{Footnotes}
 
