--- a/recoltes-et-semailles/part-0-epilogue/19.md
+++ b/recoltes-et-semailles/part-0-epilogue/19.md
@@ -7,7 +7,7 @@ Or as follows, judge the sad effect, for the inhabitants of the house, when in p
 
 That's right, the famous "mutation of the notion of space". This is what I had to "see", as a matter of course, from the beginnings of the sixties at least, without having ever taken the occasion to articulate it to myself before the moment that I am writing these lines. And I see suddenly with a new clarity, by virtue of this evocation of images alone and of the thick cloud of association which it immediately arouses: the traditional notion of "space", just like that closely related of "variety" (of all kinds, and notably that of "algebraic variety"), had taken, toward the moment where I have come to the area, such a blow of age already, that it was just as if it were dead...<sup>67</sup>(&ast;). And I could say that it is with the sudden appearance of the point of view of _schemes_ (and of its progenitor<sup>68</sup>(&ast;), plus ten thousand pages of key foundations), then of that of _toposes_, that a situation of crisis-that-does-not-say-its-name finally found its unwinding.
 
-In the image of sometimes, it is not of _one_ kid besides who we should speak, like the product of a sudden mutation, but of _two_. Two kids, and what's more, who have entered an indisputable "air of the family", even if they hardly resemble the deceased old man. And again, looking closely, one might say that the toddler Schemes would do as a "kinship link" between late Father Space (alias Varieties-of-all-kinds) and toddler Topos<sup>69</sup>(&ast;&ast;).
+In the preceeding image, it is besides not of _one_ kid who we should speak, like the product of a sudden mutation, but of _two_. Two kids, and what's more, who have entered an indisputable "air of the family", even if they hardly resemble the deceased old man. And again, looking closely, one might say that the toddler Schemes would do as a "kinship link" between late Father Space (alias Varieties-of-all-kinds) and toddler Topos<sup>69</sup>(&ast;&ast;).
 
 ---
 
