work on footnotes

--- a/recoltes-et-semailles/part-0-epilogue/19.md
+++ b/recoltes-et-semailles/part-0-epilogue/19.md
@@ -1,13 +1,13 @@
 ### 19. Death is my cradle (or three kids for a dying man)
 Until the appearance of the point of view of toposes, toward the end of the 20th century, the evolution of the notion of space seems to me like an essentially "continuous" development. It seems to proceed without bumps or jumps, from the Euclidean theorization of the space which surrounds us, and the geometry handed down to us by the Greeks, hanging onto the study of certain "figures" (lines, planes, circles, triangles etc) that live in this space. Granted, profound changes have taken place in the manner in which the mathematician or the "natural philosopher" conceives of "space"<sup>66</sup>(&ast;). But all these changes seem to me to have the nature of an essential "continuity" &mdash; they never placed the mathematician, attached (like everybody) to familiar mental images, in front of a sudden change of _scenery_. These were like the changes, profound maybe but progressive, which took place over the years in a creature we would have known already as children, and whose evolution we would have followed since its first steps until its adulthood and its full maturity. Changes imperceptible over some long periods of dead calm, perhaps tumultous during others. But even during the most intense periods of growth and ripening, and hence even as we might have lost sight of it for months, even years, at no moment could there have been the slighest doubt, the slightest hesitation: it is him again, a well-known and familiar being, who we found, but with changed features.
 
-I think I can say, besides, that around the middle of this century, this familiar being had aged a lot &mdash; such a man who would had finally been finally sold out and worn out, overwhelmed by an influx of new tasks for which he was wholly unprepared. Perhaps even he had already died his beautiful death, without anyone caring to take notice or to make the report. "Everyone" was still so busy in the house of a living, that it was almost as if he was alive and well.
+I think I can say, besides, that around the middle of this century, this familiar being had aged a lot &mdash; such a man who would had been finally sold out and worn out, overwhelmed by an influx of new tasks for which he was wholly unprepared. Perhaps even he had already died his beautiful death, without anyone caring to take notice or to make the report. "Everyone" was still so busy in the house of a living, that it was almost as if he was alive and well.
 
 Or as follows, judge the sad effect, for the inhabitants of the house, when in place of the venerable frozen old man, straight and stiff in his chair, one sees the sudden frolic of a strong child, no taller than three apples, and who pretends in passing, earnestly and like something that would go off the ground, that Mr. Space (and you may from now on drop the "Mr.", at your liking...) is _him_! If only he had the pretension of having the family traits, who knows, maybe a natural child... but not at all! Seen by the nose, nothing that reminds of the Old Man Space we had known so well (or thought we knew...), and this we were sure of, in any case (and this was the least of things...) that he was eternal...
 
-That's right, the famous "mutation of the notion of space". This is what I had to "see", as a matter of course, from the beginnings of the sixties at least, without having ever taken the occasion to articulate it to myself before the moment that I am writing these lines. And I see suddenly with a new clarity, by virtue of this evocation of images alone and of the thick cloud of association which it immediately arouses: the traditional notion of "space", just like that closely related of "variety" (of all kinds, and notably that of "algebraic variety"), had taken, toward the moment where I have come to the area, such a blow of age already, that it was just as if it were dead...<sup>67</sup>(&ast;). And I could say that it is with the sudden appearance of the point of view of _schemes_ (and of its progenitor<sup>68</sup>(&ast;), plus ten thousand pages of key foundations), then of that of _toposes_, that a situation of crisis-that-does-not-say-its-name finally found its unwinding.
+That's right, the famous "mutation of the notion of space". This is what I had to "see", as a matter of course, from the beginnings of the sixties at least, without having ever taken the occasion to articulate it to myself before the moment that I am writing these lines. And I see suddenly with a new clarity, by virtue of this evocation of images alone and of the thick cloud of association which it immediately arouses: the traditional notion of "space", just like that closely related of "manifold" [fr: variété] (of all kinds, and notably that of "algebraic variety"), had taken, toward the moment where I have come to the area, such a blow of age already, that it was just as if it were dead...<sup>67</sup>(&ast;). And I could say that it is with the sudden appearance of the point of view of _schemes_ (and of its progenitor<sup>68</sup>(&ast;), plus ten thousand pages of key foundations), then of that of _toposes_, that a situation of crisis-that-does-not-say-its-name finally found its unwinding.
 
-In the preceeding image, it is besides not of _one_ kid who we should speak, like the product of a sudden mutation, but of _two_. Two kids, and what's more, who have entered an indisputable "air of the family", even if they hardly resemble the deceased old man. And again, looking closely, one might say that the toddler Schemes would do as a "kinship link" between late Father Space (alias Varieties-of-all-kinds) and toddler Topos<sup>69</sup>(&ast;&ast;).
+In the preceeding image, it is besides not of _one_ kid who we should speak, like the product of a sudden mutation, but of _two_. Two kids, and what's more, who have entered an indisputable "air of the family", even if they hardly resemble the deceased old man. And again, looking closely, one might say that the toddler Schemes would do as a "kinship link" between late Father Space (alias Manifolds-of-all-kinds) and toddler Topos<sup>69</sup>(&ast;&ast;).
 
 ---
 
