--- a/recoltes-et-semailles/part-0-epilogue/20.md
+++ b/recoltes-et-semailles/part-0-epilogue/20.md
@@ -1,30 +1,30 @@
 ### 20. A glance at the opposite neighbors
-The situation seems to me very close to that which presented itself at the beginning of the century, with the appearance of Einstein's theory of relativity. There was a conceptual dead end, and more blatantly, it concretized in a sudden _contradiction_, which seemed irresoluble. Of course, the new idea which was going to restore order amid the chaos was an idea of childish simplicity. The remarkable thing (and conforming to a very repetitive scenario...), is that among these brilliant, eminent, prestigious people who were suddenly close to their limits trying to "save the furniture", nobody had dreamed about this idea. It was necessary that it would be a young and unknown man, fresh (conceivably) from the student amphitheatres, who come (a little embarrassed maybe about his own audacity...) to explain to his illustrious elders what had to be done to "save the phenomena": there was [...] <sup>70</sup>(&ast;) [...]
+The situation seems to me very close to that which presented itself at the beginning of the century, with the appearance of Einstein's theory of relativity. There was a conceptual dead end, and more blatantly, it concretized in a sudden _contradiction_, which seemed irresoluble. Of course, the new idea which was going to restore order amid the chaos was an idea of childish simplicity. The remarkable thing (and conforming to a very repetitive scenario...), is that among these brilliant, eminent, prestigious people who were suddenly close to their limits trying to "save the furniture", nobody had dreamed about this idea. It was necessary that it would be a young and unknown man, fresh (conceivably) from the student amphitheatres, who come (a little embarrassed maybe about his own audacity...) to explain to his illustrious elders what had to be done to "save the phenomena": it was necessary to further separate space from time<sup>70</sup>(&ast;)! <sup>[misinterpreted?]</sup> Technically, everything was there for the idea to hatch and be welcomed. And it was to the honor of Einstein's elders, that they knew indeed to welcome the new idea, without complaining too much. This here is a sign that it was again a grand time.
 
-From a mathematical point of view, Einstein's new idea is mundane. From the point of view of our conception _of physical space_, on the contrary, it is a profound mutation, and a sudden "change of scenery". The first mutation of its kind, after the mathematical model of physical space by Euclid there had been 2400 years, and [...]
+From a mathematical point of view, Einstein's new idea was mundane. From the point of view of our conception _of physical space_, on the contrary, it is a profound mutation, and a sudden "change of scenery". The first mutation of its kind, after the mathematical model of physical space by Euclid 2400 years ago, and taken as is for the needs of mechanics by all physicists and astronomers since antiquity (including Newton), for describing mechanical phenomena of the Earth and the stars.
 
-This initial idea of Einstein later deepened thoroughly, incarnating in a very subtle mathematical model, richer and more flexible, helping itself to the rich arsenal of mathematical notions that already existed <sup>71</sup>(&ast;). With the "theory of generalized relativity", this idea widened into a vast _vision_ of the physical world, embracing in the same way the subatomic world of the infinitely small, the solar system, the Milky Way and the distant galaxies, and the path of the electromagnetic wave in a space-time curved at each point by the matter that is there<sup>72</sup>(&ast;&ast;). This is the second and the last time in the history of cosmology and physics (following the first grand synthesis of Newton three centuries ago), that a vast unifying vision has appeared, in the language of a mathematical model, of the set of physical phenomena in the Universe.
+This initial idea of Einstein later deepened thoroughly, incarnating in a very subtle mathematical model, richer and more flexible, helping itself to the rich arsenal of mathematical notions that already existed <sup>71</sup>(&ast;). With the "theory of generalized relativity", this idea widened into a vast _vision_ of the physical world, embracing in the same way the subatomic world of the infinitely small, the solar system, the Milky Way and the distant galaxies, and the propagation of the electromagnetic wave in a space-time curved at each point by the matter that is there<sup>72</sup>(&ast;&ast;). This is the second and the last time in the history of cosmology and physics (following the first grand synthesis of Newton three centuries ago), that a vast unifying vision has appeared, in the language of a mathematical model, of the set of physical phenomena in the Universe.
 
-This einsteinian vision of the physical Universe has in turn been overwhelmed by events. "The set of physical phenomena" of which we are speaking has had time to expand, since the beginnings of the century! A multitude of physical theories have emerged, to report on each, with more or less of success, in a limited package of facts, in the great shambles of all the "observed facts". And we are still waiting for the audacious kid, who finds the new key while playing (if there is one...), the dream "model cake", who wants to "march" to save all phenomena at the same time...<sup>73</sup>(&ast;)
+This Einsteinian vision of the physical Universe has moreover been overwhelmed by a turn of events. "The set of physical phenomena" of which we are speaking has had time to expand, since the beginnings of the century! A multitude of physical theories have emerged, to explain each one, with more or less success, as a limited set of facts, among the great mess of all the "observed facts". And we are still waiting for the audacious kid, who finds the new key while playing (if there is one...), the dream "model cake", who wants to "march" to save all phenomena at the same time...<sup>73</sup>(&ast;)
 
 The comparison between my contribution in the mathematics of my time, and that of Einstein in physics, is imposed on me for two reasons: both works have been accomplished through a _mutation of the conception that we have of "space"_ (in the mathematical sense in one case, in the physical sense in the other); and both take the form of a _unifying vision_, embracing a vast multitude of phenomena and situations that until then appeared as separated from each other. I see there an evident _kinship of spirit_ between his work<sup>74</sup>(&ast;) and mine.
 
-This kinship does not seem at all to me to be contradicted by a difference of evident "substance". As I hinted earlier, the Einsteinian mutation concerns the notion of physical space, while Einstein draws in the arsenal of already known mathematical notions, without having ever needed to enlarge it, even upset it. His contribution consisted in freeing, among the mathematical structures known in his time, those which had the greatest aptitude to serve as "modeles" of the world of physical phenomena, in place of the dying model<sup>75</sup>(&ast;) handed down by his predecessors. In this sense, his work really was that of a _physicist_, and beyond, that of a _"philosopher of nature"_, like Newton and his contemporaries. This "philosophical" dimension is absent in my mathematical work, where I have never been brought to pose a question about the possible relations between the "ideal" conceptual constructions, that take effect in the Universe of mathematical things, and the phenomena that have taken place in the physical Universe (and even, the events experienced to take place in the psyche). My work has been that of a _mathematician_, deliberately turning away from the question of "applications" (to other sciences), or the "motivations" and physical roots of my job. Of a mathematician, furthermore, carried by his very particular genius to broaden without halt the arsenal of notions at the very basis of his art. It is thus that I have been brought, without even seeing and as if at play, to upset the most fundamental notion of all in geometry: that of "space" (and that of "variety"), that is to say our conception of the "place" where geometric beings live.
+This kinship does not seem at all to me to be contradicted by a difference of evident "substance". As I hinted earlier, the Einsteinian mutation concerns the notion of physical space, while Einstein draws in the arsenal of already known mathematical notions, without having ever needed to enlarge it, even upset it. His contribution consisted in freeing, among the mathematical structures known in his time, those which had the greatest aptitude to serve as "modeles" of the world of physical phenomena, in place of the dying model<sup>75</sup>(&ast;) handed down by his predecessors. In this sense, his work really was that of a _physicist_, and beyond, that of a _"philosopher of nature"_, like Newton and his contemporaries. This "philosophical" dimension is absent in my mathematical work, where I have never been brought to pose a question about the possible relations between the "ideal" conceptual constructions, that take effect in the Universe of mathematical things, and the phenomena that have taken place in the physical Universe (and even, the events experienced to take place in the psyche). My work has been that of a _mathematician_, deliberately turning away from the question of "applications" (to other sciences), or the "motivations" and physical roots of my job. Of a mathematician, furthermore, carried by his very particular genius to broaden without halt the arsenal of notions at the very basis of his art. It is thus that I have been brought, without even seeing and as if at play, to upset the most fundamental notion of all in geometry: that of "space" (and that of "manifold"), that is to say our conception of the "place" where geometric beings live.
 
 The new notion of space (like a sort of "generalized space", but where the points that are supposed to form the "space" have more or less faded away) does not look at all, in its substance, like the notion that Einstein brought into physics (not at all confusing, this notion, for the mathematician). A comparison imposes itself on the other hand with _quantum mechanics_ discovered by _Schrödinger_<sup>76</sup>(&ast;). In this new mechanics, the traditional "material point" disappears, to be replaced by a sort of "probabilistic cloud", more or less dense in a region of space ambient to the other, following a "probability" with which the point is found in this region. One senses, in this new perspective, an even more profound "mutation" in our way of conceiving mechanical phenomena, than in that incarnated in Einstein's model &mdash; a mutation which doesn't consist of simply replacing one mathematical model a little narrow in the armholes, by a similar one but larger cut or more adjusted. This time, the new model resembles so little the good old traditional models, that even a mathematician greatly specialized in mechanics must have felt suddenly out of place, even lost (or outraged...). Moving from the mechanics of Newton to that of Einstein must be so little, for the mathematician, like going from the good old Provençal dialect to the latest Parisian slang. By contrast, moving to quantum mechanics, I imagine, is like going from French to Chinese.
 
 And this "probabilistic cloud", replacing the reassuring material particles of yesteryear, remind me strangely of the elusive "open neighborhoods" that populate the topos, like evanescent ghosts, surrounding the imaginary "points", to which they continue to hang on against a rebellious imagination.
 
 
-<sup>70</sup>(&ast;&ast;&ast;)
+<sup>70</sup>(&ast;&ast;&ast;) This is a bit short, obviously, as a description of Einstein's idea. On the technical level, he had to bring out the structure to put on the new space-time (this was however already "in the air", with the theory of Maxwell and the ideas of Lorenz). The essential step here was not of a technical, but "philosophical" nature: to realize that the notion of simultaneity for distant events didn't have any experimental reality. It is this, the "childish assertion", the "but the emperor is naked!", that made it across the famous "imperious and invisible circle which bounds the Universe"...
 
-<sup>71</sup>(&ast;)
+<sup>71</sup>(&ast;) It's mostly about the notion of "Riemannian manifold", and about the tensor calculus on such a manifold.
 
-<sup>72</sup>(&ast;&ast;)
+<sup>72</sup>(&ast;&ast;) One of the most striking features which distinguishes this model from the Euclidean (or Newtonian) model of space and time, and also of the very first model of Einstein ("special relativity"), is that the _global topological shape_ of space-time remains indeterminate, instead of being imperatively described by the very nature of the model. The question of knowing this global shape, seems to me (as a mathematician) one of the most fascinating questions of cosmology.
 
-<sup>73</sup>(&ast;)
+<sup>73</sup>(&ast;) One has dubbed "unitary theory" such a hypothetical theory, which would arrive to "unify" and conciliate the multitude of partial theories which are in question. I have a feeling that the fundamental reflection which is waiting to be undertaken, will have to take place at two different levels.
 
-1&deg;)
+1&deg;) A reflection of "philosophical" nature, on the same notion of "mathematical model" for a portion of reality. Since the success of the Newtonian theory, it has become a tacit axiom of physics that there _exists_ a mathematical model (and even, a unique model, or _"the"_ model) for expressing physical reality in a perfect manner, without "detachment" or smudges. This concensus, which made law for more than two centuries, is like a sort of fossil remains of the living vision of a Pythagorean that "Everything is number". Maybe this is the new "invisible cercle", that has replaced the ancient metaphysical circles to restrict the Universe of the physicist (while the race of "natural philosophers" seems definitely extinct, supplanted with flying colors by that of computers...). As long as one wants to stop there for even a moment, it is clear however that the validity of the consensus there is not obvious. There are even very serious philosophical reasons, that [...]
 
 2&deg;)
 
