--- a/recoltes-et-semailles/part-0-epilogue/20.md
+++ b/recoltes-et-semailles/part-0-epilogue/20.md
@@ -9,7 +9,7 @@ This Einsteinian vision of the physical Universe has moreover been overwhelmed b
 
 The comparison between my contribution in the mathematics of my time, and that of Einstein in physics, is imposed on me for two reasons: both works have been accomplished through a _mutation of the conception that we have of "space"_ (in the mathematical sense in one case, in the physical sense in the other); and both take the form of a _unifying vision_, embracing a vast multitude of phenomena and situations that until then appeared as separated from each other. I see there an evident _kinship of spirit_ between his work<sup>74</sup>(&ast;) and mine.
 
-This kinship does not seem at all to me to be contradicted by a difference of evident "substance". As I hinted earlier, the Einsteinian mutation concerns the notion of physical space, while Einstein draws in the arsenal of already known mathematical notions, without having ever needed to enlarge it, even upset it. His contribution consisted in freeing, among the mathematical structures known in his time, those which had the greatest aptitude to serve as "modeles" of the world of physical phenomena, in place of the dying model<sup>75</sup>(&ast;) handed down by his predecessors. In this sense, his work really was that of a _physicist_, and beyond, that of a _"philosopher of nature"_, like Newton and his contemporaries. This "philosophical" dimension is absent in my mathematical work, where I have never been brought to pose a question about the possible relations between the "ideal" conceptual constructions, that take effect in the Universe of mathematical things, and the phenomena that have taken place in the physical Universe (and even, the events experienced to take place in the psyche). My work has been that of a _mathematician_, deliberately turning away from the question of "applications" (to other sciences), or the "motivations" and physical roots of my job. Of a mathematician, furthermore, carried by his very particular genius to broaden without halt the arsenal of notions at the very basis of his art. It is thus that I have been brought, without even seeing and as if at play, to upset the most fundamental notion of all in geometry: that of "space" (and that of "manifold"), that is to say our conception of the "place" where geometric beings live.
+This kinship does not seem at all to me to be contradicted by a difference of evident "substance". As I hinted earlier, the Einsteinian mutation concerns the notion of physical space, while Einstein draws in the arsenal of already known mathematical notions, without having ever needed to enlarge it, even upset it. His contribution consisted in freeing, among the mathematical structures known in his time, those which had the greatest aptitude to serve as "models" of the world of physical phenomena, in place of the dying model<sup>75</sup>(&ast;) handed down by his predecessors. In this sense, his work really was that of a _physicist_, and beyond, that of a _"philosopher of nature"_, like Newton and his contemporaries. This "philosophical" dimension is absent in my mathematical work, where I have never been brought to pose a question about the possible relations between the "ideal" conceptual constructions, that take effect in the Universe of mathematical things, and the phenomena that have taken place in the physical Universe (and even, the events experienced to take place in the psyche). My work has been that of a _mathematician_, deliberately turning away from the question of "applications" (to other sciences), or the "motivations" and physical roots of my job. Of a mathematician, furthermore, carried by his very particular genius to broaden without halt the arsenal of notions at the very basis of his art. It is thus that I have been brought, without even seeing and as if at play, to upset the most fundamental notion of all in geometry: that of "space" (and that of "manifold"), that is to say our conception of the "place" where geometric beings live.
 
 The new notion of space (like a sort of "generalized space", but where the points that are supposed to form the "space" have more or less faded away) does not look at all, in its substance, like the notion that Einstein brought into physics (not at all confusing, this notion, for the mathematician). A comparison imposes itself on the other hand with _quantum mechanics_ discovered by _Schrödinger_<sup>76</sup>(&ast;). In this new mechanics, the traditional "material point" disappears, to be replaced by a sort of "probabilistic cloud", more or less dense in a region of space ambient to the other, following a "probability" with which the point is found in this region. One senses, in this new perspective, an even more profound "mutation" in our way of conceiving mechanical phenomena, than in that incarnated in Einstein's model &mdash; a mutation which doesn't consist of simply replacing one mathematical model a little narrow in the armholes, by a similar one but larger cut or more adjusted. This time, the new model resembles so little the good old traditional models, that even a mathematician greatly specialized in mechanics must have felt suddenly out of place, even lost (or outraged...). Moving from the mechanics of Newton to that of Einstein must be so little, for the mathematician, like going from the good old Provençal dialect to the latest Parisian slang. By contrast, moving to quantum mechanics, I imagine, is like going from French to Chinese.
 
