--- a/recoltes-et-semailles/part-0-epilogue/20.md
+++ b/recoltes-et-semailles/part-0-epilogue/20.md
@@ -9,11 +9,11 @@ This Einsteinian vision of the physical Universe has moreover been overwhelmed b
 
 The comparison between my contribution in the mathematics of my time, and that of Einstein in physics, is imposed on me for two reasons: both works have been accomplished through a _mutation of the conception that we have of "space"_ (in the mathematical sense in one case, in the physical sense in the other); and both take the form of a _unifying vision_, embracing a vast multitude of phenomena and situations that until then appeared as separated from each other. I see there an evident _kinship of spirit_ between his work<sup>74</sup>(&ast;) and mine.
 
-This kinship does not seem at all to me to be contradicted by a difference of evident "substance". As I hinted earlier, the Einsteinian mutation concerns the notion of physical space, while Einstein draws in the arsenal of already known mathematical notions, without having ever needed to enlarge it, even upset it. His contribution consisted in freeing, among the mathematical structures known in his time, those which had the greatest aptitude to serve as "models" of the world of physical phenomena, in place of the dying model<sup>75</sup>(&ast;) handed down by his predecessors. In this sense, his work really was that of a _physicist_, and beyond, that of a _"philosopher of nature"_, like Newton and his contemporaries. This "philosophical" dimension is absent in my mathematical work, where I have never been brought to pose a question about the possible relations between the "ideal" conceptual constructions, that take effect in the Universe of mathematical things, and the phenomena that have taken place in the physical Universe (and even, the events experienced to take place in the psyche). My work has been that of a _mathematician_, deliberately turning away from the question of "applications" (to other sciences), or the "motivations" and physical roots of my job. Of a mathematician, furthermore, carried by his very particular genius to broaden without halt the arsenal of notions at the very basis of his art. It is thus that I have been brought, without even seeing and as if at play, to upset the most fundamental notion of all in geometry: that of "space" (and that of "manifold"), that is to say our conception of the "place" where geometric beings live.
+This kinship does not seem at all to me to be contradicted by a difference of evident _"substance"_. As I have already hinted earlier, the Einsteinian mutation concerns the notion of physical space, while Einstein draws from the arsenal of already known mathematical notions, without having ever needed to enlarge it, even upset it. His contribution consisted in freeing, among the mathematical structures known in his time, those which were best suited to serve as "models" of the world of physical phenomena, in place of the dying model<sup>75</sup>(&ast;) handed down by his predecessors. In this sense, his work really was that of a _physicist_, and what's more, that of a _"philosopher of nature"_, like Newton and his contemporaries. This "philosophical" dimension is absent in my mathematical work, where I have never been brought to pose a question about the possible relations between the "ideal" conceptual constructions, that take effect in the Universe of mathematical things, and the phenomena that take place in the physical Universe (and even, the events experienced to take place in the psyche). My work has been that of a _mathematician_, deliberately turning away from the question of "applications" (to other sciences), or the "motivations" and physical roots of my job. Of a mathematician, furthermore, carried by his very particular genius to broaden without halt the arsenal of notions at the very basis of his art. It is thus that I have been brought, without even seeing and as if at play, to upset the most fundamental notion of all in geometry: that of _space_ (and that of "manifold"), that is to say our conception of the very "place" where geometric beings live.
 
-The new notion of space (like a sort of "generalized space", but where the points that are supposed to form the "space" have more or less faded away) does not look at all, in its substance, like the notion that Einstein brought into physics (not at all confusing, this notion, for the mathematician). A comparison imposes itself on the other hand with _quantum mechanics_ discovered by _Schrödinger_<sup>76</sup>(&ast;). In this new mechanics, the traditional "material point" disappears, to be replaced by a sort of "probabilistic cloud", more or less dense in a region of space ambient to the other, following a "probability" with which the point is found in this region. One senses, in this new perspective, an even more profound "mutation" in our way of conceiving mechanical phenomena, than in that incarnated in Einstein's model &mdash; a mutation which doesn't consist of simply replacing one mathematical model a little narrow in the armholes, by a similar one but larger cut or more adjusted. This time, the new model resembles so little the good old traditional models, that even a mathematician greatly specialized in mechanics must have felt suddenly out of place, even lost (or outraged...). Moving from the mechanics of Newton to that of Einstein must be so little, for the mathematician, like going from the good old Provençal dialect to the latest Parisian slang. By contrast, moving to quantum mechanics, I imagine, is like going from French to Chinese.
+The new notion of space (as a sort of "generalized space", but where the points that are supposed to form the "space" have more or less faded away) does not look at all, in its substance, like the notion that Einstein brought into physics (not at all confusing, this notion, for the mathematician). A comparison imposes itself on the other hand with _quantum mechanics_ discovered by _Schrödinger_<sup>76</sup>(&ast;). In this new mechanics, the traditional "material point" disappears, to be replaced by a sort of "probabilistic cloud", more or less dense in a region of space next to the other, following a "probability" with which the point is found in this region. One senses, in this new perspective, an even more profound "mutation" in our way of conceiving mechanical phenomena, than in that incarnated in Einstein's model &mdash; a mutation which doesn't consist of simply replacing one mathematical model a little narrow in the armholes, by a similar one but larger cut or better adjusted. This time, the new model resembles so little the good old traditional models, that even the mathematician greatly specialized in mechanics must have felt himself suddenly out of place, even lost (or outraged...). Moving from the mechanics of Newton to that of Einstein must be so little, for the mathematician, like going from the good old Provençal dialect to the latest Parisian slang. By contrast, moving to quantum mechanics, I imagine, is like going from French to Chinese.
 
-And this "probabilistic cloud", replacing the reassuring material particles of yesteryear, remind me strangely of the elusive "open neighborhoods" that populate the topos, like evanescent ghosts, surrounding the imaginary "points", to which they continue to hang on against a rebellious imagination.
+And this "probabilistic cloud", replacing the reassuring material particles of yesteryear, remind me strangely of the elusive "open neighborhoods" that populate toposes, like evanescent ghosts, surrounding the imaginary "points", to which they continue to hang on against a rebellious imagination...
 
 
 <sup>70</sup>(&ast;&ast;&ast;) This is a bit short, obviously, as a description of Einstein's idea. On the technical level, he had to bring out the structure to put on the new space-time (this was however already "in the air", with the theory of Maxwell and the ideas of Lorenz). The essential step here was not of a technical, but "philosophical" nature: to realize that the notion of simultaneity for distant events didn't have any experimental reality. It is this, the "childish assertion", the "but the emperor is naked!", that made it across the famous "imperious and invisible circle which bounds the Universe"...
@@ -26,10 +26,12 @@ And this "probabilistic cloud", replacing the reassuring material particles of y
 
 1&deg;) A reflection of "philosophical" nature, on the same notion of "mathematical model" for a portion of reality. Since the success of the Newtonian theory, it has become a tacit axiom of physics that there _exists_ a mathematical model (and even, a unique model, or _"the"_ model) for expressing physical reality in a perfect manner, without "detachment" or smudges. This concensus, which made law for more than two centuries, is like a sort of fossil remains of the living vision of a Pythagorean that "Everything is number". Maybe this is the new "invisible cercle", that has replaced the ancient metaphysical circles to restrict the Universe of the physicist (while the race of "natural philosophers" seems definitely extinct, supplanted with flying colors by that of computers...). As long as one wants to stop there for even a moment, it is clear however that the validity of the consensus there is not obvious. There are even very serious philosophical reasons, that [...]
 
-2&deg;)
+2&deg;) Only _after_ such a reflection, it seems to me, does the "technical" question of bringing out an explicit model, more satisfactory than its predecessors, make complete sense. This would be the moment then, maybe, to free oneself of a second tacit axiom of the physician, going back to antiquity, this axiom, and being profoundly anchored in our mode of perception even of space: it is that of the _continuous nature_ of space and time (or of space-time), of the "place" therefore where "physical phenomena" unfold.
 
-<sup>74</sup>(&ast;)
+[...]
 
-<sup>75</sup>(&ast;)
+<sup>74</sup>(&ast;) I don't pretend at all to be familiar with Einstein's work. In fact, I have not read any of his works, and don't know his ideas other than by hearsay and very approximatively. I have however the impression of discerning "the forest", even if I've never taken the effort to scrutinize any of its trees...
 
-<sup>76</sup>(&ast;)
+<sup>75</sup>(&ast;) For comments on the qualifier "dying", see a preceeding footnote (note <sup>67</sup>(&ast;)).
+
+<sup>76</sup>(&ast;) I believe to understand (by the echoes that returned to me from various sides) that one generally considers there to have been three "revolutions" or big disruptions in the physics of this century: the theory of Einstein, the discovery of radioactivity by the Curie's, and the introduction of quantum mechanics by Schrödinger.
